# vecset-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: keyed.rs  map.rs  set.rs
src/keyed/: entry.rs  impls.rs  iter.rs  serde.rs
src/map/: entry.rs  impls.rs  serde.rs
src/set/: entry.rs  impls.rs  serde.rs
