[package]
name = "vecset"
version = "0.0.4"
authors = ["Jeong, Yunwon <jeong@youknowone.org>"]
license = "MIT OR Apache-2.0"
description = "A vector-based sorted map, set and keyed-set implementation"
repository = "https://github.com/youknowone/vecset-rs"
documentation = "https://docs.rs/vecset/"
keywords = ["map", "set", "vec", "keyed-set", "no-std"]
categories = ["data-structures", "no-std"]
readme = "README.md"
edition = "2024"
exclude = [
    ".github/",
]

[features]
default = []
serde = ["dep:serde"]

[dependencies.serde]
default-features = false
optional = true
version = "1.0"

[dev-dependencies]
serde_test = "1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
